FIX LANDSCAPE ON SMALL RESOLUTIONS

--- a/css/style.css
+++ b/css/style.css
@@ -316,7 +316,6 @@ section.aboutMe{
 }
 section.aboutMe p{
     text-align: center;
-    font-weight: bold;
 }
 section.aboutMe h2{
     text-align: center;
@@ -387,13 +386,20 @@ div.skills p{
         flex-wrap: nowrap;
         justify-content: space-around;
         align-items: center;
-        height: 500px;
     }
-    div.hobby>div.hobbyDescription>div{
-        width: 280px;
+    div.hobby>div.hobbyDescription>div.hobbyImage{
+        width: 250px;
     }
     div.hobby p{
-        width: 280px;
+        width: 250px;
+    }
+}
+@media (orientation: landscape) and (min-width: 730px) {
+    div.hobby>div.hobbyDescription>div.hobbyImage{
+        width: 300px;
+    }
+    div.hobby p{
+        width: 300px;
     }
 }
 @media (orientation: landscape) and (min-width: 1024px){
@@ -407,11 +413,11 @@ div.skills p{
         height: 350px;
     }
     div.hobby>div.hobbyDescription>div.hobbyImage{
-        width: 400px;
-        height: 300px;
+        width: 350px;
+        height: 250px;
     }
     div.hobby p{
-        width: 300px;
+        width: 350px;
     }
 }
 @media (orientation: portrait) and (min-width: 768px){
@@ -546,18 +552,18 @@ section.portfolio a{
 }
 @media (orientation: landscape) and (min-width: 1024px){
     section.portfolio{
-        height: 1700px;
+        height: 1400px;
     }
     section.portfolio div.projectDescription{
         width: 80vw;
-        height: 450px;
+        height: 350px;
     }
     section.portfolio > div.projectDescription > div.projectImage{
-        width: 400px;
-        height: 300px;
+        width: 350px;
+        height: 250px;
     }
     section.portfolio p{
-        width: 300px;
+        width: 350px;
     }  
 }
 @media (orientation: portrait) and (min-width: 768px){
